tests/ui/feature-gates/feature-gate-coroutines.e2024.stderr
error[E0627]: yield expression outside of coroutine literal
  --> $DIR/feature-gate-coroutines.rs:5:5
   |
LL |     yield true;
   |     ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0627`.
